# job-search-automation

./: package-lock.json  pyproject.toml  requirements-mcp.txt
.github/workflows/: benchmarks.yml  codeql.yml  coverage.yml  dependency-review.yml  release.yml  scorecard.yml  security.yml
deploy/common/examples/: ripgrep_demo.py
deploy/common/scripts/: watch-jobs.sh
